--- a/app/src/main/res/layout/main_ac.xml
+++ b/app/src/main/res/layout/main_ac.xml
@@ -44,7 +44,7 @@
                         android:alpha="0.85"
                         android:fitsSystemWindows="true"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/launch" />
+                        android:src="@drawable/launch1" />
 
                     <androidx.appcompat.widget.Toolbar
                         android:id="@+id/toolbar"
