--- a/app/src/main/res/layout/succulent_favorite_fragment.xml
+++ b/app/src/main/res/layout/succulent_favorite_fragment.xml
@@ -13,10 +13,20 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="敬请期待"
+            android:padding="50dp"
+            android:textSize="20sp" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/succulent_list_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:visibility="gone">
 
         </androidx.recyclerview.widget.RecyclerView>
     </LinearLayout>
